Footer layout change

--- a/index.html
+++ b/index.html
@@ -395,19 +395,14 @@
 
             </div> <!-- /tab-content -->
 
-          </div> <!-- /span -->
-        </div> <!-- /row -->
-      </div> <!-- /liquid -->
-
-      <div class="footer liquid">
-        <div class="row">
-          <div class="span8">
+            <hr class="footer">
             <footer>
               <p>&copy; Spa Nefertiti 2012</p>
             </footer>
-          </div>
-        </div>
-      </div>
+
+          </div> <!-- /span -->
+        </div> <!-- /row -->
+      </div> <!-- /liquid -->
 
     </div>
 
