Adicionando logo e fotos de Tratamentos

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
 
             <div class="hero-unit_">
               <div class="hero-unit">
-                <h1>Spa Nefertiti</h1>
-                <p>Dermatologia &amp; Estética.</p>
+                <h1><span>Spa Nefertiti</span></h1>
               </div>
             </div>
 
@@ -127,43 +126,85 @@
                     </ul>
                     <div class="tab-content">
                       <div id="tratamento-corporal" class="tab-pane active fade in">
-                        <h2>Lipomassagem</h2>
-                        <p>É conhecida também como power massagem. É uma técnica de massagem que, através de um ritmo intenso e deslizamentos profundos, consegue reduzir medidas em poucas sessões. Realiza a quebra de gordura e ameniza o problema da celulite. Tem também um efeito modelador. Ideal para quem já está habituada à rotina de tratamentos estéticos.</p>
+                        <div class="span3">
+                          <ul class="thumbnails">
+                            <li class="span3">
+                              <img src="img/trat-lipomassagem.jpg"/>
+                              <h2>Lipomassagem</h2>
+                              <p>É conhecida também como power massagem. É uma técnica de massagem que, através de um ritmo intenso e deslizamentos profundos, consegue reduzir medidas em poucas sessões. Realiza a quebra de gordura e ameniza o problema da celulite. Tem também um efeito modelador. Ideal para quem já está habituada à rotina de tratamentos estéticos.</p>
+                            </li>
 
-                        <p>Atualmente oferecemos serviços utilizando vários equipamentos, dentre eles, citamos:</p>
+                            <li class="span3">
+                              <img src="img/trat-carboxiterapia.jpg"/>
+                              <h2>Carboxiterapia</h2>
+                              <p>Técnica simples e comprovada, utilizada para o tratamento da flacidez cutânea, celulite, estrias, gorduras localizada, cicatrizes e como tratamento complementar à lipoaspiração.</p>
+                            </li>
 
-                        <h2>Manthus</h2>
-                        <p>Trabalha com a sinergia de duas funções: ultrassom e estímulos elétricos através da eletroporação. Diferente da Corrente Russa, que tonifica os músculos, o Manthus age melhorando o aspecto de ondulação da pele. Ideal para diminuir a gordura localizada e a celulite.</p>
+                            <li class="span3">
+                              <img src="img/trat-infra-red.jpg"/>
+                              <h2>Infrared</h2>
+                              <p>Aparelho com ondas do Infravermelho que faz ocorrer uma ressonância com as moléculas de água provocando uma intensa vibração, ionizando e ativando essas moléculas e as nossas células.</p>
+                              <p>Como conseqüência ocorre a estimulação do metabolismo da célula, a eliminação de gorduras em excesso devido ao aquecimento molecular e a melhora da drenagem linfática pelo aumento da vaso dilatação.</p>
+                            </li>
 
-                        <h2>Carboxiterapia</h2>
-                        <p>Técnica simples e comprovada, utilizada para o tratamento da flacidez cutânea, celulite, estrias, gorduras localizada, cicatrizes e como tratamento complementar à lipoaspiração.</p>
+                            <li class="span3">
+                              <img src="img/trat-laser-diodo.jpg"/>
+                              <h2>Laser diodo</h2>
+                              <p>As técnicas de depilação a laser têm experimentado um grande desenvolvimento e cada vez é maior o número de homens e mulheres que se submetem a elas. Assim, a depilação a laser é atualmente um dos tratamentos estéticos estrela.</p>
+                              <p>O Laser Diodo, pode ser utilizado com total segurança, por pessoas de todos os tipos de pele: branca, negra, amarela.</p>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="span3">
+                          <ul class="thumbnails">
+                            <li class="span3">
+                              <img src="img/trat-manthus.jpg"/>
+                              <h2>Manthus</h2>
+                              <p>Trabalha com a sinergia de duas funções: ultrassom e estímulos elétricos através da eletroporação. Diferente da Corrente Russa, que tonifica os músculos, o Manthus age melhorando o aspecto de ondulação da pele. Ideal para diminuir a gordura localizada e a celulite.</p>
+                            </li>
 
-                        <h2>Corrente russa</h2>
-                        <p>Equipamento de estimulação elétrica que estimula as fibras brancas e vermelhas com o objetivo de reduzir a flacidez e tonificar os músculos.</p>
+                            <li class="span3">
+                              <img src="img/trat-corrente-russa.jpg"/>
+                              <h2>Corrente russa</h2>
+                              <p>Equipamento de estimulação elétrica que estimula as fibras brancas e vermelhas com o objetivo de reduzir a flacidez e tonificar os músculos.</p>
+                            </li>
 
-                        <h2>Infrared</h2>
-                        <p>Aparelho com ondas do Infravermelho que faz ocorrer uma ressonância com as moléculas de água provocando uma intensa vibração, ionizando e ativando essas moléculas e as nossas células.</p>
-                        <p>Como conseqüência ocorre a estimulação do metabolismo da célula, a eliminação de gorduras em excesso devido ao aquecimento molecular e a melhora da drenagem linfática pelo aumento da vaso dilatação.</p>
-
-                        <h2>Intradermoterapia ou Mesoterapia</h2>
-                        <p>Uma técnica dentro da medicina estética que consiste na injeção intradérmica de substâncias que irão promover o tratamento. Nessa técnica, usa-se uma agulha muito fina para a injeção de drogas na camada dérmica ou hipodérmica. </p>
-                        <p>As drogas irão promover a “queima” de gordura localizada, drenagem linfática, estimulação de células fibroblásticas para a produção de fibras colágenas e elásticas, e até estimulação do couro cabeludo para crescimento capilar. Dessa forma, é usada como técnica de tratamento para gordura localizada, celulite,flacidez de pele, estrias, calvície. </p>
-                        <p>As sessões tem intervalos semanais, devido a dose máxima de alguns medicamentos. Por isso, é um tratamento exclusivamente médico devido aos riscos de choque anafilático e edema de glote. O n° de sessões varia de 10 a 20 sessões dependendo da área a ser tratada e perfil de cada paciente.</p>
-
-                        <h2>Laser diodo</h2>
-                        <p>As técnicas de depilação a laser têm experimentado um grande desenvolvimento e cada vez é maior o número de homens e mulheres que se submetem a elas. Assim, a depilação a laser é atualmente um dos tratamentos estéticos estrela.</p>
-                        <p>O Laser Diodo, pode ser utilizado com total segurança, por pessoas de todos os tipos de pele: branca, negra, amarela.</p>
+                            <li class="span3">
+                              <img src="img/trat-intra-mesoterapia.jpg"/>
+                              <h2>Intradermoterapia ou Mesoterapia</h2>
+                              <p>Uma técnica dentro da medicina estética que consiste na injeção intradérmica de substâncias que irão promover o tratamento. Nessa técnica, usa-se uma agulha muito fina para a injeção de drogas na camada dérmica ou hipodérmica. </p>
+                              <p>As drogas irão promover a “queima” de gordura localizada, drenagem linfática, estimulação de células fibroblásticas para a produção de fibras colágenas e elásticas, e até estimulação do couro cabeludo para crescimento capilar. Dessa forma, é usada como técnica de tratamento para gordura localizada, celulite,flacidez de pele, estrias, calvície. </p>
+                              <p>As sessões tem intervalos semanais, devido a dose máxima de alguns medicamentos. Por isso, é um tratamento exclusivamente médico devido aos riscos de choque anafilático e edema de glote. O n° de sessões varia de 10 a 20 sessões dependendo da área a ser tratada e perfil de cada paciente.</p>
+                            </li>
+                          </ul>
+                        </div>
                       </div>
 
                       <div id="tratamento-facial" class="tab-pane fade">
-                        <h2>Limpeza e hidratação da pele</h2>
-                        <p>Limpa a pele profundamente, liberando-a de impurezas que impedem o bom funcionamento do tecido cutâneo.</p>
+                        <div class="span3">
+                          <ul class="thumbnails">
+                            <li class="span3">
+                              <img src="img/trat-limpeza-hidra-pele.jpg"/>
+                              <h2>Limpeza e hidratação da pele</h2>
+                              <p>Limpa a pele profundamente, liberando-a de impurezas que impedem o bom funcionamento do tecido cutâneo.</p>
+                            </li>
 
-                        <h2>Anti-acne</h2>
-                        <p>Atua nas três fases da formação da acne. Equilibra a secreção e higieniza, atua diminuindo a produção sebácea. Agentes cicatrizantes, calmantes e antiinflamatórios.</p>
-
-                        <h2>Refine</h2>
-                        <p>Sistema inovador de tratamento dermoabrasivo com peeling de cristais. Promove a renovação celular e revitalização da pele. Nutre e hidrata, é tensor e antioxidante.</p>
+                            <li class="span3">
+                              <img src="img/trat-refine.jpg"/>
+                              <h2>Refine</h2>
+                              <p>Sistema inovador de tratamento dermoabrasivo com peeling de cristais. Promove a renovação celular e revitalização da pele. Nutre e hidrata, é tensor e antioxidante.</p>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="span3">
+                          <ul class="thumbnails">
+                            <li class="span3">
+                              <img src="img/trat-anti-acne.jpg"/>
+                              <h2>Anti-acne</h2>
+                              <p>Atua nas três fases da formação da acne. Equilibra a secreção e higieniza, atua diminuindo a produção sebácea. Agentes cicatrizantes, calmantes e antiinflamatórios.</p>
+                            </li>
+                          </ul>
+                        </div>
                       </div>
 
                       <div id="dermatologia" class="tab-pane fade">
@@ -174,21 +215,36 @@
                       </div>
 
                       <div id="saude-e-bem-estar" class="tab-pane fade">
-                        <h2>Acupuntura auricular</h2>
-                        <p>São colocados cristais  em pontos estratégicos no pavilhão auricular,para tratamento da ansiedade e fome.</p>
+                        <div class="span3">
+                          <ul class="thumbnails">
+                            <li class="span3">
+                              <img src="img/trat-acupuntura.jpg"/>
+                              <h2>Acupuntura auricular</h2>
+                              <p>São colocados cristais  em pontos estratégicos no pavilhão auricular,para tratamento da ansiedade e fome.</p>
+                            </li>
 
-                        <h2>Pilates</h2>
-                        <p>Planos especiais de Pilates para todas as idades.</p>
+                            <li class="span3">
+                              <img src="img/trat-circuito-aerobico.jpg"/>
+                              <h2>Circuito Aeróbico</h2>
+                              <p>Voltado para o condicionamento físico,   afastado o individuo do sedentarismo. São realizados exercícios aeróbicos (corrida, pedalada) e anaeróbicos (levantamento de pesos) alternados com  alongamento,bicicleta e esteira.</p>
+                            </li>
+                          </ul>
+                        </div>
+                        <div class="span3">
+                          <ul class="thumbnails">
+                            <li class="span3">
+                              <img src="img/trat-pilates.jpg"/>
+                              <h2>Pilates</h2>
+                              <p>Planos especiais de Pilates para todas as idades.</p>
+                            </li>
 
-                        <h2>Hidroginástica</h2>
-                        <p>Melhora a capacidade aeróbica e cardio-respiratória, a resistência e a força muscular, a flexibilidade e o bem-estar geral. Ela tem a vantagem de poder ser praticada por pessoas de qualquer sexo e de qualquer idade. A hidroginástica é uma opção alternativa para o seu programa normal de exercícios. É uma excelente opção para pessoas que levam uma vida muito agitada e têm pouco tempo para a prática de exercícios.</p>
-
-                        <h2>Reeducação Alimentar</h2>
-                        <p>A mudança nos hábitos alimentares é essencial para saúde, bem estar e beleza. Com uma boa alimentação é possível perder peso e reduzir a gordura localizada. O programa de reeducação é personalizado e visa à adoção de hábitos mais saudáveis. A alimentação ideal deve fornecer os nutrientes necessários para o bom estado nutricional.  A gordura normalmente está associada ao excesso de peso, mas muitas pessoas magras podem ter excesso de 
-    gordura em  sua composição corporal.</p>
-
-                        <h2>Circuito Aeróbico</h2>
-                        <p>Voltado para o condicionamento físico,   afastado o individuo do sedentarismo. São realizados exercícios aeróbicos (corrida, pedalada) e anaeróbicos (levantamento de pesos) alternados com  alongamento,bicicleta e esteira.</p>
+                            <li class="span3">
+                              <img src="img/trat-reeducacao-alimentar.jpg"/>
+                              <h2>Reeducação Alimentar</h2>
+                              <p>A mudança nos hábitos alimentares é essencial para saúde, bem estar e beleza. Com uma boa alimentação é possível perder peso e reduzir a gordura localizada. O programa de reeducação é personalizado e visa à adoção de hábitos mais saudáveis. A alimentação ideal deve fornecer os nutrientes necessários para o bom estado nutricional.  A gordura normalmente está associada ao excesso de peso, mas muitas pessoas magras podem ter excesso de gordura em  sua composição corporal.</p>
+                            </li>
+                          </ul>
+                        </div>
                       </div>
                     </div>
                   </div>
@@ -417,3 +473,5 @@
 
   </body>
 </html>
+
+
