--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <li class="span3 dermatologia">
                       <h1>Dermatologia e Tricologia</h1>
                     </li>
-                    <li class="span3 outro">
+                    <li class="span3 pacotes">
                       <h1>Pacotes</h1>
                     </li>
                   </ul>
@@ -100,11 +100,15 @@
                   <h1>Dermatologia e Tricologia</h1>
                   <div class="tabbable">
                     <ul class="nav nav-tabs">
-                      <li class="active"><a href="#clinica-dermatologia" data-toggle="tab">Dermatologia</a></li>
+                      <li class="active"><a href="#clinica-pic" data-toggle="tab">&bull;</a></li>
+                      <li><a href="#clinica-dermatologia" data-toggle="tab">Dermatologia</a></li>
                       <li><a href="#clinica-tricologia" data-toggle="tab">Tricologia</a></li>
                     </ul>
                     <div class="tab-content">
-                      <div id="clinica-dermatologia" class="tab-pane active fade in">
+                      <div id="clinica-pic" class="tab-pane active fade in">
+                        &nbsp;
+                      </div>
+                      <div id="clinica-dermatologia" class="tab-pane fade">
                         <p>Dra Cinthia Trisóglio<br/>
                            Crm:138153<br/>
                            E-mail: <a href="mailto:dra.cinthia.trisoglio@spanefertiti.com.br">dra.cinthia.trisoglio@spanefertiti.com.br</a><br/>
@@ -131,12 +135,16 @@
                   <h1>Tratamentos Estéticos</h1>
                   <div class="tabbable">
                     <ul class="nav nav-tabs">
-                      <li class="active"><a href="#tratamento-corporal" data-toggle="tab">Tratamento Corporal</a></li>
+                      <li class="active"><a href="#tratamento-pic" data-toggle="tab">&bull;</a></li>
+                      <li><a href="#tratamento-corporal" data-toggle="tab">Tratamento Corporal</a></li>
                       <li><a href="#tratamento-facial" data-toggle="tab">Tratamento Facial</a></li>
                       <li><a href="#saude-e-bem-estar" data-toggle="tab">Saúde e Bem Estar</a></li>
                     </ul>
                     <div class="tab-content">
-                      <div id="tratamento-corporal" class="tab-pane active fade in">
+                      <div id="tratamento-pic" class="tab-pane active fade in">
+                        &nbsp;
+                      </div>
+                      <div id="tratamento-corporal" class="tab-pane fade">
                         <div class="row"><div class="span3">
                           <ul class="thumbnails">
                             <li class="span3">
@@ -216,12 +224,17 @@
                   <h1>Rituais de SPA</h1>
                   <div class="tabbable">
                     <ul class="nav nav-tabs">
-                      <li class="active"><a href="#rituais-corpo" data-toggle="tab">Rituais do Corpo</a></li>
+                      <li class="active"><a href="#rituais-pic" data-toggle="tab">&bull;</a></li>
+                      <li><a href="#rituais-corpo" data-toggle="tab">Rituais do Corpo</a></li>
                       <li><a href="#rituais-banho" data-toggle="tab">Rituais do Banho</a></li>
                       <li><a href="#rituais-massagem" data-toggle="tab">Rituais de Massagem</a></li>
                     </ul>
                     <div class="tab-content">
-                      <div id="rituais-corpo" class="tab-pane active fade in">
+                      <div id="rituais-pic" class="tab-pane active fade in">
+                        &nbsp;
+                      </div>
+
+                      <div id="rituais-corpo" class="tab-pane fade">
                         <h2>Fangotermal</h2>
                         <p>Tratamento realizado com argila verde. Auxilia no combate à celulite e melhora o tônus da pele.</p>
 
@@ -274,12 +287,16 @@
                   <h1>Pacotes Especiais</h1>
                   <div class="tabbable">
                     <ul class="nav nav-tabs">
-                      <li class="active"><a href="#pacotes-dermatologia" data-toggle="tab">Dermatologia</a></li>
+                      <li class="active"><a href="#pacotes-pic" data-toggle="tab">&bull;</a></li>
+                      <li><a href="#pacotes-dermatologia" data-toggle="tab">Dermatologia</a></li>
                       <li><a href="#pacotes-tratamentos-esteticos" data-toggle="tab">Tratamentos Estéticos</a></li>
                       <li><a href="#pacotes-rituais" data-toggle="tab">Rituais Spa</a></li>
                       <li><a href="#pacotes-pilates" data-toggle="tab">Pilates</a></li>
                     </ul>
                     <div class="tab-content">
+                      <div id="pacotes-pic" class="tab-pane active fade in">
+                        &nbsp;
+                      </div>
                       <div id="pacotes-dermatologia" class="tab-pane active fade in">
                         <h2>Microlipo</h2>
                         <p>10 semanas</p>
@@ -438,7 +455,8 @@
                   <p>Rua conde afonso celso, 505<br/>
                      Boulevard - Ribeirão Preto<br/>
                      Tel: <a href="tel:01632367372">(16) 3236-7372</a>
-                          <a href="tel:01632367472">(16) 3236-7472</a>
+                          <a href="tel:01632367472">(16) 3236-7472</a><br/>
+                     E-mail: <a href="mailto:sac@spanefertiti.com.br">sac@spanefertiti.com.br</a>
                   </p>
                 </article>
               </div>
