Pequena mudanca nomes medicos

--- a/index.html
+++ b/index.html
@@ -110,17 +110,17 @@
                       </div>
                       <div id="clinica-dermatologia" class="tab-pane fade">
                         <p>Dra Cinthia Trisóglio<br/>
+                           <a href="mailto:dra.cinthia.trisoglio@spanefertiti.com.br">dra.cinthia.trisoglio@spanefertiti.com.br</a><br/>
                            Crm:138153<br/>
-                           E-mail: <a href="mailto:dra.cinthia.trisoglio@spanefertiti.com.br">dra.cinthia.trisoglio@spanefertiti.com.br</a><br/>
                            Pós  graduada em Dermatologia e medicina Estética</p>
                         <p>Laser para rugas, manchas e rejuvenescimento, Botox ,Peeling, Preenchimento Pequenas Cirurgias Dermatológicas</p>
                       </div>
                       <div id="clinica-tricologia" class="tab-pane fade">
                         <p>Dra Felipe Haikal<br/>
+                           <a href="mailto:dr.felipe.haikal@spanefertiti.com.br">dr.felipe.haikal@spanefertiti.com.br</a><br/>
                            Crm:134491<br/>
                            Sócio da Sociedade Brasileira de Tricologia Médica
- Doenças do Couro Cabeludo e Cirurgia Capilar.<br/>
-                           E-mail: <a href="mailto:dr.felipe.haikal@spanefertiti.com.br">dr.felipe.haikal@spanefertiti.com.br</a>
+ Doenças do Couro Cabeludo e Cirurgia Capilar.
                            </p>
                         <p>Tratamentos de doenças do couro cabeludo e Transplante capilar</p>
                       </div>
