Adicionando pacotes esteticos

--- a/index.html
+++ b/index.html
@@ -309,6 +309,33 @@
                       </div>
 
                       <div id="pacotes-tratamentos-esteticos" class="tab-pane fade">
+                        <h2>Nefertiti Shaped</h2>
+                        <p><b>Perca Medidas e Peso                    ( 5 semanas-4 a 8kg)-R$ 780,00</b><br/>
+                          2xAvaliação  com fisiterapia  e  Bioempedância <br/>
+                          1xAvaliação nutricionista  (R$100)<br/>
+                          1xAvaliação médica  (R$200)<br/>
+                          5x Infrared          (R$500)<br/>
+                          5xAculpultura  auricular   (R$250)<br/>
+                          5xAlongamento mais fitiness   (R$100)<br/>
+                          5xintradermoterapia com agulha(Enzimas) (R$600)<br/>
+                          <b>Total:R$1850</b></p>
+
+                        <h2>CeluDetox</h2>
+                        <p><b>(10 semanas) R$1520,00</b><br/>
+                          10xCarboxiterapia   (R$1200)<br/>
+                          10xDrenagem linfática  (R$ 1000)<br/>
+                          1x Avaliação  nutrional + fitoterapia (R$100)<br/>
+                          20xfitiness ($400)<br/>
+                          <b>Total:2700</b></p>
+
+                        <h2>Nefertiti Modelagem</h2>
+                        <p><b>(5semanas)R$1155,00</b><br/>
+                          5xCorrente russa (R$350)<br/>
+                          5xLipomassagem(R$500)<br/>
+                          5xEndermo(R$350)<br/>
+                          1xAvaliação nutricional + fitoterapia(R$100)<br/>
+                          5xUS (R$350)<br/>
+                          <b>Total:R$1650</b></p>
                       </div>
 
                       <div id="pacotes-rituais" class="tab-pane fade">
