minor correcao bola

--- a/index.html
+++ b/index.html
@@ -118,10 +118,9 @@
                         <p>Dra Felipe Haikal<br/>
                            <a href="mailto:dr.felipe.haikal@spanefertiti.com.br">dr.felipe.haikal@spanefertiti.com.br</a><br/>
                            Crm:134491<br/>
-                           Sócio da Sociedade Brasileira de Tricologia Médica
- Doenças do Couro Cabeludo e Cirurgia Capilar.
+                           Socio da Sociedade Brasileira de Tricologia Médica<br/>
+                           Tratamento de doenças do Couro cabeludo e Implante capilar
                            </p>
-                        <p>Tratamentos de doenças do couro cabeludo e Transplante capilar</p>
                       </div>
 
                     </div>
