--- a/index.html
+++ b/index.html
@@ -83,15 +83,14 @@
               <div id="quemsomos" class="tab-pane fade">
                 <article>
                   <h1>Quem Somos</h1>
-                  <p><b>Spa Nefertiti</b> - Templo de beleza e bem estar, um local ideal para você cuidar do seu corpo, rosto e mente...</p>
-                  <p>Os ambientes são aconchegantes e harmônicos, projetados e decorados para criar um lugar tranqüilo e propício para aliviar o seu do stress do dia a dia, sem necessidade de sair da cidade.</p>
+                  <p>O Spa Urbano Nefertiti foi idealizado na rainha XVIII dinastia do Antigo Egito, seu nome Nefertiti  significa " a mais bela chegou" . Elaboramos um templo de beleza para o seu bem estar, ideal para você cuidar do seu corpo, rosto e mente. Os ambientes são aconchegantes e harmônicos, projetados e decorados para criar um lugar tranquilo para aliviar o seu stress do dia a dia sem precisar sair da cidade.</p>
                 </article>
               </div>
 
               <div id="estrutura" class="tab-pane fade">
                 <article>
                   <h1>Estrutura</h1>
-                  <p>Composta de uma equipe multiprofissional especializada por dermatologista, nutricionista, fisioterapeutas e esteticistas, que estão sempre prontos para atendê-lo, dando toda a atenção que você merece. Conta com modernos aparelhos para o desenvolvimento de tratamentos Estéticos Faciais e Corporais, Massagens Terapêuticas, Banhos Especiais, Ôfuro, entre outros. Ainda oferece aulas de Pilates e hidroginástica.</p>
+                  <p>O Spa Urbano Nefertiti é composto por uma equipe multiprofissional especializada em dermatologia, nutrição, fisioterapia e estética, dando toda atenção que você merece. Estamos prontos para atende-los com aparelhos modernos para os tratamentos estéticos, faciais, corporais, massagens terapêuticas, banhos especiais, ofurô, entre outros. Oferecemos também em nosso espaço aulas de Pilates.</p>
                 </article>
               </div>
 
@@ -149,12 +148,12 @@
                           <ul class="thumbnails">
                             <li class="span3">
                               <h2>Lipomassagem</h2>
-                              <p>É conhecida também como power massagem. É uma técnica de massagem que, através de um ritmo intenso e deslizamentos profundos, consegue reduzir medidas em poucas sessões. Realiza a quebra de gordura e ameniza o problema da celulite. Tem também um efeito modelador. Ideal para quem já está habituada à rotina de tratamentos estéticos.</p>
+                              <p>Conhecida também como power massagem, é uma técnica que através de um ritmo intenso e deslizamentos profundos consegue reduzir medidas em poucas sessões. Realiza a quebra de gordura e ameniza o problema da celulite, resultando em um efeito modelador. Ideal para quem já está habituada à rotina de tratamentos estéticos.</p>
                             </li>
 
                             <li class="span3">
                               <h2>Carboxiterapia</h2>
-                              <p>Técnica simples e comprovada, utilizada para o tratamento da flacidez cutânea, celulite, estrias, gorduras localizada, cicatrizes e como tratamento complementar à lipoaspiração.</p>
+                              <p>Técnica simples e comprovada, utilizada para o tratamento da flacidez cutânea, celuliteS, estrias, gorduras localizadaS, cicatrizes e como tratamento complementar à lipoaspiração.</p>
                             </li>
 
                             <li class="span3">
