--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                            <a href="mailto:dra.cinthia.trisoglio@spanefertiti.com.br">dra.cinthia.trisoglio@spanefertiti.com.br</a><br/>
                            Crm:138153<br/>
                            Pós  graduada em Dermatologia e medicina Estética</p>
-                        <p>Laser para rugas, manchas e rejuvenescimento, Botox ,Peeling, Preenchimento Pequenas Cirurgias Dermatológicas</p>
+                        <p>Laser para rugas, manchas e rejuvenescimento, Botox ,Peeling, Preenchimento, Pequenas Cirurgias Dermatológicas</p>
                       </div>
                       <div id="clinica-tricologia" class="tab-pane fade">
                         <p>Dra Felipe Haikal<br/>
@@ -354,11 +354,11 @@
                         <p>Limpeza e hidratação facial,peeling Diamante,banho de imersão (ofurô com hidromassagem e cromoterapia). Total: 2h e meia.<br/>
                            <b>De R$360,00 por R$255,00</b></p>
                         <h2>Spa Gestante</h2>
-                        <p>Drenagem linfática, depilação, manicure e pedicure, banho de imersão (ofurô com hidromassagem e cromoterapia). Total: 2h e 30 min.<br/>
+                        <p>Drenagem linfática, depilação, banho de imersão (ofurô com hidromassagem e cromoterapia). Total: 2h e 30 min.<br/>
                            *gestantes somente após o terceiro mês de gestação e com liberação medica.</p>
 
                         <h2>Spa Day Nefertiti</h2>
-                        <p>Banho de lua, manicure e pedicure,  peeling de cristal, banho de imersão (ofurô com hidromassagem e cromoterapia). Total: 4h.</p>
+                        <p>Banho de lua, peeling de cristal, banho de imersão (ofurô com hidromassagem e cromoterapia). Total: 4h.</p>
 
                         <h2>Spa Verão</h2>
                         <p>Gomagem,Banho de lua,Brozeamento a jato,banho de ofuro com Hidrataçaõ capilar.3h<br/>
