--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                         <p>Laser para rugas, manchas e rejuvenescimento, Botox ,Peeling, Preenchimento, Pequenas Cirurgias Dermatológicas</p>
                       </div>
                       <div id="clinica-tricologia" class="tab-pane fade">
-                        <p>Dra Felipe Haikal<br/>
+                        <p>Dr Felipe Haikal<br/>
                            <a href="mailto:dr.felipe.haikal@spanefertiti.com.br">dr.felipe.haikal@spanefertiti.com.br</a><br/>
                            Crm:134491<br/>
                            Socio da Sociedade Brasileira de Tricologia Médica<br/>
