pacotes-pic active, pacotes-dermatologia nao

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
                       <div id="pacotes-pic" class="tab-pane active fade in">
                         &nbsp;
                       </div>
-                      <div id="pacotes-dermatologia" class="tab-pane active fade in">
+                      <div id="pacotes-dermatologia" class="tab-pane fade">
                         <h2>Microlipo</h2>
                         <p>10 semanas</p>
                         <p>5xconsulta médica-R$1000<br/>
