--- a/index.html
+++ b/index.html
@@ -477,121 +477,121 @@
                   <div id="album">
                     <h2>Inauguração</h2><br/>
                     <a href="img/fotos/2012.06.28/1.jpg">
-                      <img src="img/fotos/2012.06.28/1.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/1.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/2.jpg">
-                      <img src="img/fotos/2012.06.28/2.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/2.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/3.jpg">
-                      <img src="img/fotos/2012.06.28/3.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/3.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/4.jpg">
-                      <img src="img/fotos/2012.06.28/4.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/4.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/5.jpg">
-                      <img src="img/fotos/2012.06.28/5.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/5.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/6.jpg">
-                      <img src="img/fotos/2012.06.28/6.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/6.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/7.jpg">
-                      <img src="img/fotos/2012.06.28/7.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/7.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/8.jpg">
-                      <img src="img/fotos/2012.06.28/8.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/8.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/9.jpg">
-                      <img src="img/fotos/2012.06.28/9.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/9.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/10.jpg">
-                      <img src="img/fotos/2012.06.28/10.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/10.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/11.jpg">
-                      <img src="img/fotos/2012.06.28/11.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/11.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/12.jpg">
-                      <img src="img/fotos/2012.06.28/12.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/12.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/13.jpg">
-                      <img src="img/fotos/2012.06.28/13.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/13.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/14.jpg">
-                      <img src="img/fotos/2012.06.28/14.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/14.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/15.jpg">
-                      <img src="img/fotos/2012.06.28/15.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/15.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/16.jpg">
-                      <img src="img/fotos/2012.06.28/16.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/16.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/17.jpg">
-                      <img src="img/fotos/2012.06.28/17.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/17.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/18.jpg">
-                      <img src="img/fotos/2012.06.28/18.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/18.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/19.jpg">
-                      <img src="img/fotos/2012.06.28/19.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/19.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/20.jpg">
-                      <img src="img/fotos/2012.06.28/20.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/20.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/21.jpg">
-                      <img src="img/fotos/2012.06.28/21.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/21.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/22.jpg">
-                      <img src="img/fotos/2012.06.28/22.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/22.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/23.jpg">
-                      <img src="img/fotos/2012.06.28/23.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/23.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/24.jpg">
-                      <img src="img/fotos/2012.06.28/24.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/24.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/25.jpg">
-                      <img src="img/fotos/2012.06.28/25.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/25.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/26.jpg">
-                      <img src="img/fotos/2012.06.28/26.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/26.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/27.jpg">
-                      <img src="img/fotos/2012.06.28/27.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/27.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/28.jpg">
-                      <img src="img/fotos/2012.06.28/28.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/28.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/29.jpg">
-                      <img src="img/fotos/2012.06.28/29.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/29.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/30.jpg">
-                      <img src="img/fotos/2012.06.28/30.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/30.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/31.jpg">
-                      <img src="img/fotos/2012.06.28/31.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/31.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/32.jpg">
-                      <img src="img/fotos/2012.06.28/32.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/32.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/33.jpg">
-                      <img src="img/fotos/2012.06.28/33.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/33.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/34.jpg">
-                      <img src="img/fotos/2012.06.28/34.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/34.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/35.jpg">
-                      <img src="img/fotos/2012.06.28/35.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/35.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/36.jpg">
-                      <img src="img/fotos/2012.06.28/36.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/36.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/37.jpg">
-                      <img src="img/fotos/2012.06.28/37.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/37.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/38.jpg">
-                      <img src="img/fotos/2012.06.28/38.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/38.t.jpg">
                     </a>
                     <a href="img/fotos/2012.06.28/39.jpg">
-                      <img src="img/fotos/2012.06.28/39.t.jpg">
+                      <img src="img/transparent.png" data-original="img/fotos/2012.06.28/39.t.jpg">
                     </a>                    
                 </div>
                 </article>  
