Added preload for large images in album

--- a/index.html
+++ b/index.html
@@ -619,6 +619,7 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/jquery.ui.photoviewer.js"></script>
+    <script src="js/jquery.imgpreload.min.js"></script>
   </body>
 </html>
 
